//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  hashedPassword String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  conversationIds String[] [not null]
  conversations Conversation [not null]
  seenMessageIds String[] [not null]
  seenMessages Message [not null]
  accounts Account [not null]
  messages Message [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Conversation {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  lastMessageAt DateTime [default: `now()`, not null]
  name String
  isGroup Boolean
  messagesIds String[] [not null]
  messages Message [not null]
  userIds String[] [not null]
  users User [not null]
}

Table Message {
  id String [pk]
  body String
  image String
  createAt DateTime [default: `now()`, not null]
  pinned Boolean
  seenIds String[] [not null]
  seen User [not null]
  conversationId String [not null]
  conversation Conversation [not null]
  senderId String [not null]
  sender User [not null]
}

Ref: User.conversationIds > Conversation.id

Ref: User.seenMessageIds > Message.id

Ref: Account.userId > User.id [delete: Cascade]

Ref: Conversation.userIds > User.id

Ref: Message.seenIds > User.id

Ref: Message.conversationId > Conversation.id [delete: Cascade]

Ref: Message.senderId > User.id